--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="recipe_title_font_size">24sp</dimen>
-    <dimen name="recipe_description_font_size">16</dimen>
+    <dimen name="recipe_title_font_size">18sp</dimen>
+    <dimen name="recipe_description_font_size">14sp</dimen>
+    <dimen name="username_recipe_size">18sp</dimen>
 </resources>
