--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.home.MainActivity">
+    tools:context=".screens.coins.CoinActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/action_bar_toolbar"
