Added Details screen for the currency. Added spinner to check the value of different market currencies in the details view of the selected cryptocoin. Added StringUtils class. Added new WebService call for specific cryptocoin.

--- a/app/src/main/res/layout/activity_coin_detail.xml
+++ b/app/src/main/res/layout/activity_coin_detail.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".screens.coindetail.CoinDetailActivity">
 
+    <FrameLayout
+        android:id="@+id/flContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </android.support.constraint.ConstraintLayout>
