--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".screens.coins.CoinActivity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/action_bar_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/primaryColor"
-        app:titleTextColor="@color/primaryTextColor"
-        />
-
-
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/action_bar_toolbar">
+        app:layout_constraintTop_toTopOf="parent">
 
     </FrameLayout>
 
